changed the hyperlink to new.html to index.html
Change done on line 11

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="21">
     <tr>
-      <td><a href="new.html"><img src="download.jpg" alt="Profile Picture" height="150"></a></td>
+      <td><a href="index.html"><img src="download.jpg" alt="Profile Picture" height="150"></a></td>
       <td>
         <h1> This is Kittu's site </h1>
         <p><em>Sr. Web Solutions Specialist</em></p>
